--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "import-data": "node scripts/import-data-migration.mjs"
   },
   "dependencies": {
+    "@sanity/client": "^6.25.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.70.0",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "google-map-react": "^2.2.1",
-    "next": "^14.2.23",
+    "next": "^15.1.5",
+    "next-sanity": "^9.8.38",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "sanity": "^3.70.0",
+    "styled-components": "^6.1.14",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
